refined portfolio grid

--- a/_factory_grid.html
+++ b/_factory_grid.html
@@ -26,28 +26,35 @@
                                     <p class="pd-grid-1-item-tag">Apps</p>
                                     <h3 class="pd-grid-1-item-headline">Cornwall&apos;s beaches in your pocket</h3>
                                     <p class="pd-grid-1-item-subPara">We&apos;re just about to launch an exciting app for iOS and Android</p>
+                                </div> </a><a href="#" class="pd-grid-1-item pd-grid-1-item-2"> <img src="images/uploads/hero-coast-1000x1000.jpg" class="pd-grid-1-image"/><div class="pd-grid-1-image-overlay pg-empty-placeholder"></div><div class="pd-grid-1-item-content">
+                                    <p class="pd-grid-1-item-tag">Web</p>
+                                    <h3 class="pd-grid-1-item-headline">High search rankings in a competitive market</h3>
+                                    <p class="pd-grid-1-item-subPara">We built a new perfomant website for international artist Naomi Jenkin.</p>
+                                </div> </a><a href="#" class="pd-grid-1-item pd-grid-1-item-3"> <img src="images/uploads/hero-sample-1.jpg" class="pd-grid-1-image"/><div class="pd-grid-1-image-overlay pg-empty-placeholder"></div><div class="pd-grid-1-item-content">
+                                    <p class="pd-grid-1-item-tag">Web</p>
+                                    <h3 class="pd-grid-1-item-headline">Helping Scientific Services grow their business</h3>
+                                    <p class="pd-grid-1-item-subPara">Scientific Services needed a new website to support its ambitious growth objectives.</p>
+                                </div> </a><a href="#" class="pd-grid-1-item pd-grid-1-item-4"> <img src="images/uploads/hero-testimonials.jpg" class="pd-grid-1-image"/><div class="pd-grid-1-image-overlay pg-empty-placeholder"></div><div class="pd-grid-1-item-content">
+                                    <p class="pd-grid-1-item-tag">Web</p>
+                                    <h3 class="pd-grid-1-item-headline">Showcasing Quality</h3>
+                                    <p class="pd-grid-1-item-subPara">Pendigital built Jewell Construction&apos;s new website...</p>
+                                </div> </a><a href="#" class="pd-grid-1-item pd-grid-1-item-5"> <img src="images/uploads/sections-sample-healthcare.jpg" class="pd-grid-1-image"/><div class="pd-grid-1-image-overlay pg-empty-placeholder"></div><div class="pd-grid-1-item-content">
+                                    <p class="pd-grid-1-item-tag">Web</p>
+                                    <h3 class="pd-grid-1-item-headline">Training web app to help clinicians recycling</h3>
+                                    <p class="pd-grid-1-item-subPara">Our cost simulator and game helps clinicians save money and recycle more...</p>
+                                </div> </a><a href="#" class="pd-grid-1-item pd-grid-1-item-6"> <img src="images/uploads/cards-sample-1.jpg" class="pd-grid-1-image"/><div class="pd-grid-1-image-overlay pg-empty-placeholder"></div><div class="pd-grid-1-item-content">
+                                    <p class="pd-grid-1-item-tag">Web</p>
+                                    <h3 class="pd-grid-1-item-headline">Membership website</h3>
+                                    <p class="pd-grid-1-item-subPara">A new subscription based website for Club Roy</p>
+                                </div> </a><a href="#" class="pd-grid-1-item pd-grid-1-item-7"> <img src="images/uploads/cards-sample-3.jpg" class="pd-grid-1-image"/><div class="pd-grid-1-image-overlay pg-empty-placeholder"></div><div class="pd-grid-1-item-content">
+                                    <p class="pd-grid-1-item-tag">Games</p>
+                                    <h3 class="pd-grid-1-item-headline">HTML5 spelling game</h3>
+                                    <p class="pd-grid-1-item-subPara">Fun and simple to use, helping children to learn their phonics.</p>
+                                </div> </a><a href="#" class="pd-grid-1-item pd-grid-1-item-8"> <img src="images/uploads/cards-sample-2.jpg" class="pd-grid-1-image"/><div class="pd-grid-1-image-overlay pg-empty-placeholder"></div><div class="pd-grid-1-item-content">
+                                    <p class="pd-grid-1-item-tag">Games</p>
+                                    <h3 class="pd-grid-1-item-headline">Animated parrots and CreateJS</h3>
+                                    <p class="pd-grid-1-item-subPara">Another new game to support the teaching of reading and writing.</p>
                                 </div> </a>
-                            <div class="pd-grid-1-item pd-grid-1-item-2">
-                                <img src="images/uploads/hero-coast-1000x1000.jpg" style="position: absolute; width: 100%; height: 100%; object-fit: cover; object-position: center center;"/>
-                            </div>
-                            <div class="pd-grid-1-item pd-grid-1-item-3">
-                                <img src="images/uploads/hero-sample-1.jpg" style="width: 100%; height: 100%; position: absolute; object-fit: cover; objecti-position: center center;"/>
-                            </div>
-                            <div class="pd-grid-1-item pd-grid-1-item-4">
-                                <img src="images/uploads/hero-testimonials.jpg" style="width: 100%; height: 100%; position: absolute; object-fit: cover; objecti-position: center center;"/>
-                            </div>
-                            <div class="pd-grid-1-item pd-grid-1-item-5">
-                                <img style="width: 100%; height: 100%; position: absolute; object-fit: cover; object-position: center center;" src="images/uploads/sections-sample-healthcare.jpg"/>
-                            </div>
-                            <div class="pd-grid-1-item pd-grid-1-item-6">
-                                <img style="width: 100%; height: 100%; position: absolute; object-fit: cover; objecti-position: center center;" src="images/uploads/cards-sample-1.jpg"/>
-                            </div>
-                            <div class="pd-grid-1-item pd-grid-1-item-7">
-                                <img style="width: 100%; height: 100%; position: absolute; object-fit: cover; objecti-position: center center;" src="images/uploads/cards-sample-3.jpg"/>
-                            </div>
-                            <div class="pd-grid-1-item pd-grid-1-item-8">
-                                <img style="width: 100%; height: 100%; position: absolute; object-fit: cover; objecti-position: center center;" src="images/uploads/cards-sample-2.jpg"/>
-                            </div>
                         </div>                         
                     </div>
                 </div>
