--- a/_factory_grid.html
+++ b/_factory_grid.html
@@ -21,6 +21,11 @@
         <section class="pb-5 pd-grid-1 pt-5">
             <div class="container-xxl">
                 <div class="row">
+                    <div class="col-12 pb-4 text-center">
+                        <h2 style="font-size: 0.7rem; font-weight: 700; letter-spacing: 0.1em; text-transform: uppercase;">Featured web, app and game projects</h2> 
+                        <p style="font-size: 2.4rem; font-weight: 700;"><strong>Quality websites, apps and games</strong></p>
+                        <p style="font-weight: 300;">View a snapshot of some of our work. We&apos;ve created performant, quality websites and apps.</p> 
+                    </div>
                     <div class="col-12 pe-0 pe-xl-2 ps-0 ps-xl-2">
                         <div class="pd-grid-1-grid-outer"><a href="#" class="pd-grid-1-item pd-grid-1-item-1"> <img src="images/uploads/blog-post-1.jpg" class="pd-grid-1-image"/><div class="pd-grid-1-image-overlay pg-empty-placeholder"></div><div class="pd-grid-1-item-content">
                                     <p class="pd-grid-1-item-tag">Apps</p>
@@ -56,6 +61,9 @@
                                     <p class="pd-grid-1-item-subPara">Another new game to support the teaching of reading and writing.</p>
                                 </div> </a>
                         </div>                         
+                    </div>
+                    <div class="col-12 pt-4 text-center">
+                        <a href="#" name="anchor" class="pd-grid-1-btn">View more</a>                          
                     </div>
                 </div>
             </div>
