Added new testimonial 8 and 9

--- a/_factory_testimonials.html
+++ b/_factory_testimonials.html
@@ -49,7 +49,8 @@
             </article>
             <footer class="container pb-3 pt-5 text-end">
                 <div class="row">
-                    <div class="col text-center text-md-end"><a href="#" name="anchor" class="pd-testimonial-1-link">Hear from more of our clients...<span><img src="images/design-assets/icon-arrow-secondary.svg" alt="icon of an arrow" width="20" height="20"/></span></a> 
+                    <div class="col text-center text-md-end">
+                        <a href="#" name="anchor" class="pd-testimonial-1-link">Hear from more of our clients...<span><img src="images/design-assets/icon-arrow-secondary.svg" alt="icon of an arrow" width="20" height="20"/></span></a> 
                     </div>
                 </div>
             </footer>
@@ -90,7 +91,8 @@
             </article>
             <footer class="container pb-3 pt-5">
                 <div class="row">
-                    <div class="col text-center"><a href="#" name="anchor" class="btn btn-info"><span><img alt="icon of an arrow" width="20" height="20" src="images/design-assets/icon-arrow-01.svg" class="me-2"/></span>View Testimonials</a> 
+                    <div class="col text-center">
+                        <a href="#" name="anchor" class="btn btn-info"><span><img alt="icon of an arrow" width="20" height="20" src="images/design-assets/icon-arrow-01.svg" class="me-2"/></span>View Testimonials</a> 
                     </div>
                 </div>
             </footer>
@@ -139,7 +141,8 @@
             </article>
             <footer class="container pb-3 pt-5 text-end">
                 <div class="row">
-                    <div class="col text-center text-md-end"><a href="#" name="anchor" class="pd-testimonial-3-link">Hear from more of our clients...<span><img alt="icon of an arrow" width="20" height="20" src="images/design-assets/icon-arrow-01.svg"/></span></a> 
+                    <div class="col text-center text-md-end">
+                        <a href="#" name="anchor" class="pd-testimonial-3-link">Hear from more of our clients...<span><img alt="icon of an arrow" width="20" height="20" src="images/design-assets/icon-arrow-01.svg"/></span></a> 
                     </div>
                 </div>
             </footer>
@@ -197,7 +200,8 @@
             </article>
             <footer class="container pb-3 pt-5 text-end" style="z-index: 1; position: relative;">
                 <div class="row">
-                    <div class="col text-center text-md-end"><a href="#" name="anchor" class="pd-testimonial-4-link">Hear from more of our clients...<span><img alt="icon of an arrow" width="20" height="20" src="images/design-assets/icon-arrow-01.svg"/></span></a> 
+                    <div class="col text-center text-md-end">
+                        <a href="#" name="anchor" class="pd-testimonial-4-link">Hear from more of our clients...<span><img alt="icon of an arrow" width="20" height="20" src="images/design-assets/icon-arrow-01.svg"/></span></a> 
                     </div>
                 </div>
             </footer>
@@ -257,7 +261,8 @@
             </div>
             <footer class="container pb-3 pt-5 text-end" style="z-index: 1; position: relative;">
                 <div class="row">
-                    <div class="col text-center text-md-end"><a href="#" name="anchor" class="pd-testimonial-5-link">Hear from more of our clients...<span><img alt="icon of an arrow" width="20" height="20" src="images/design-assets/icon-arrow-secondary.svg"/></span></a> 
+                    <div class="col text-center text-md-end">
+                        <a href="#" name="anchor" class="pd-testimonial-5-link">Hear from more of our clients...<span><img alt="icon of an arrow" width="20" height="20" src="images/design-assets/icon-arrow-secondary.svg"/></span></a> 
                     </div>
                 </div>
             </footer>
@@ -317,7 +322,8 @@
             </div>
             <footer class="container pb-3 pt-5 text-end" style="z-index: 1; position: relative;">
                 <div class="row">
-                    <div class="col text-center text-md-end"><a href="#" name="anchor" class="pd-testimonial-6-link">Hear from more of our clients...<span><img alt="icon of an arrow" width="20" height="20" src="images/design-assets/icon-arrow-secondary.svg"/></span></a> 
+                    <div class="col text-center text-md-end">
+                        <a href="#" name="anchor" class="pd-testimonial-6-link">Hear from more of our clients...<span><img alt="icon of an arrow" width="20" height="20" src="images/design-assets/icon-arrow-secondary.svg"/></span></a> 
                     </div>
                 </div>
             </footer>
@@ -386,7 +392,8 @@
             </div>
             <div class="container pb-3 pt-5 text-end" style="z-index: 1; position: relative;">
                 <div class="row">
-                    <div class="col text-center text-md-end"><a href="#" name="anchor" class="pd-testimonial-7-link">Hear from more of our clients...<span><img alt="icon of an arrow" width="20" height="20" src="images/design-assets/icon-arrow-01.svg"/></span></a> 
+                    <div class="col text-center text-md-end">
+                        <a href="#" name="anchor" class="pd-testimonial-7-link">Hear from more of our clients...<span><img alt="icon of an arrow" width="20" height="20" src="images/design-assets/icon-arrow-01.svg"/></span></a> 
                     </div>
                 </div>
             </div>
@@ -394,6 +401,72 @@
         <section class="pb-5 pt-5" style="position: relative;">
             <div style="position: absolute; bottom: 1px;">
                 <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-testimonial-8</p>
+            </div>
+        </section>
+        <section class="pb-5 pd-testimonial-8 pt-5">
+            <div class="container">
+                <div class="row">
+                    <header class="col-12 pb-4 text-center">
+                        <h2 class="pd-testimonial-8-label">Reviews</h2> 
+                        <p class="pd-testimonial-8-headline">Nice words about Pendigital...</p>
+                        <p class="pd-testimonial-8-subPara">We always go the extra mile so that you get what you need for your business. We take great pride in our work.</p> 
+                    </header>
+                    <article class="col-lg-6  pb-5 pe-lg-5"> 
+                        <p class="pb-1 pd-testimonial-8-text">&quot;Tim&rsquo;s flexible approach and support has meant that we now have a fantastic website that will support Scientific Services going forward. I wouldn&rsquo;t hesitate to recommend Pendigital&rsquo;s services and I am looking to use their services to support other marketing activities in the future.&quot;</p>
+                        <footer>
+                            <p class="mb-0 pd-testimonial-8-author">Carly Matthews</p>
+                            <p class="pd-testimonial-8-business">Scientific Services</p>
+                        </footer>                         
+                    </article>
+                    <article class="col-lg-6 pb-5 ps-lg-5"> 
+                        <p class="pb-1 pd-testimonial-8-text">&quot;Pendigital put in so much work behind the scenes to make sure everything loads as quickly as possible, and to make the site robust and user friendly. I had many requests along the way, which Tim was always more than happy to implement for me. I feel like I now have a website I can really be proud of. Thanks Tim!&quot;</p>
+                        <footer>
+                            <p class="mb-0 pd-testimonial-8-author">Naomi Jenkin</p>
+                            <p class="pd-testimonial-8-business">Naomi Jenkin Art</p>
+                        </footer>                         
+                    </article>
+                    <footer class="col-12 text-center">
+                        <a href="#" name="anchor" class="pd-testimonial-8-btn">Read more reviews</a>                          
+                    </footer>
+                </div>
+            </div>
+        </section>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-testimonial-9</p>
+            </div>
+        </section>
+        <section class="pb-5 pd-testimonial-9 pt-5">
+            <div class="container">
+                <div class="row">
+                    <header class="col-12 pb-4 text-center">
+                        <h2 class="pd-testimonial-9-label">Reviews</h2> 
+                        <p class="pd-testimonial-9-headline">Nice words about Pendigital...</p>
+                        <p class="pd-testimonial-9-subPara">We always go the extra mile so that you get what you need for your business. We take great pride in our work.</p> 
+                    </header>
+                    <article class="col-lg-6  pb-5 pe-lg-5"> 
+                        <p class="pb-1 pd-testimonial-9-text">&quot;Tim&rsquo;s flexible approach and support has meant that we now have a fantastic website that will support Scientific Services going forward. I wouldn&rsquo;t hesitate to recommend Pendigital&rsquo;s services and I am looking to use their services to support other marketing activities in the future.&quot;</p>
+                        <footer>
+                            <p class="mb-0 pd-testimonial-9-author">Carly Matthews</p>
+                            <p class="pd-testimonial-9-business">Scientific Services</p>
+                        </footer>                         
+                    </article>
+                    <article class="col-lg-6 pb-5 ps-lg-5"> 
+                        <p class="pb-1 pd-testimonial-9-text">&quot;Pendigital put in so much work behind the scenes to make sure everything loads as quickly as possible, and to make the site robust and user friendly. I had many requests along the way, which Tim was always more than happy to implement for me. I feel like I now have a website I can really be proud of. Thanks Tim!&quot;</p>
+                        <footer>
+                            <p class="mb-0 pd-testimonial-9-author">Naomi Jenkin</p>
+                            <p class="pd-testimonial-9-business">Naomi Jenkin Art</p>
+                        </footer>                         
+                    </article>
+                    <footer class="col-12 text-center">
+                        <a href="#" name="anchor" class="pd-testimonial-9-btn">Read more reviews</a>                          
+                    </footer>
+                </div>
+            </div>
+        </section>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-testimonial-10</p>
             </div>
         </section>
         <!-- Bootstrap core JavaScript
