--- a/_factory_testimonials.html
+++ b/_factory_testimonials.html
@@ -49,8 +49,7 @@
             </article>
             <footer class="container pb-3 pt-5 text-end">
                 <div class="row">
-                    <div class="col text-center text-md-end">
-                        <a href="#" name="anchor" class="pd-testimonial-1-link">Hear from more of our clients...<span><img src="images/design-assets/icon-arrow-secondary.svg" alt="icon of an arrow" width="20" height="20"/></span></a> 
+                    <div class="col text-center text-md-end"><a href="#" name="anchor" class="pd-testimonial-1-link">Hear from more of our clients...<span><img src="images/design-assets/icon-arrow-secondary.svg" alt="icon of an arrow" width="20" height="20"/></span></a> 
                     </div>
                 </div>
             </footer>
@@ -91,8 +90,7 @@
             </article>
             <footer class="container pb-3 pt-5">
                 <div class="row">
-                    <div class="col text-center">
-                        <a href="#" name="anchor" class="btn btn-info"><span><img alt="icon of an arrow" width="20" height="20" src="images/design-assets/icon-arrow-01.svg" class="me-2"/></span>View Testimonials</a> 
+                    <div class="col text-center"><a href="#" name="anchor" class="btn btn-info"><span><img alt="icon of an arrow" width="20" height="20" src="images/design-assets/icon-arrow-01.svg" class="me-2"/></span>View Testimonials</a> 
                     </div>
                 </div>
             </footer>
@@ -141,8 +139,7 @@
             </article>
             <footer class="container pb-3 pt-5 text-end">
                 <div class="row">
-                    <div class="col text-center text-md-end">
-                        <a href="#" name="anchor" class="pd-testimonial-3-link">Hear from more of our clients...<span><img alt="icon of an arrow" width="20" height="20" src="images/design-assets/icon-arrow-01.svg"/></span></a> 
+                    <div class="col text-center text-md-end"><a href="#" name="anchor" class="pd-testimonial-3-link">Hear from more of our clients...<span><img alt="icon of an arrow" width="20" height="20" src="images/design-assets/icon-arrow-01.svg"/></span></a> 
                     </div>
                 </div>
             </footer>
@@ -200,8 +197,7 @@
             </article>
             <footer class="container pb-3 pt-5 text-end" style="z-index: 1; position: relative;">
                 <div class="row">
-                    <div class="col text-center text-md-end">
-                        <a href="#" name="anchor" class="pd-testimonial-4-link">Hear from more of our clients...<span><img alt="icon of an arrow" width="20" height="20" src="images/design-assets/icon-arrow-01.svg"/></span></a> 
+                    <div class="col text-center text-md-end"><a href="#" name="anchor" class="pd-testimonial-4-link">Hear from more of our clients...<span><img alt="icon of an arrow" width="20" height="20" src="images/design-assets/icon-arrow-01.svg"/></span></a> 
                     </div>
                 </div>
             </footer>
@@ -261,8 +257,7 @@
             </div>
             <footer class="container pb-3 pt-5 text-end" style="z-index: 1; position: relative;">
                 <div class="row">
-                    <div class="col text-center text-md-end">
-                        <a href="#" name="anchor" class="pd-testimonial-5-link">Hear from more of our clients...<span><img alt="icon of an arrow" width="20" height="20" src="images/design-assets/icon-arrow-secondary.svg"/></span></a> 
+                    <div class="col text-center text-md-end"><a href="#" name="anchor" class="pd-testimonial-5-link">Hear from more of our clients...<span><img alt="icon of an arrow" width="20" height="20" src="images/design-assets/icon-arrow-secondary.svg"/></span></a> 
                     </div>
                 </div>
             </footer>
@@ -322,8 +317,7 @@
             </div>
             <footer class="container pb-3 pt-5 text-end" style="z-index: 1; position: relative;">
                 <div class="row">
-                    <div class="col text-center text-md-end">
-                        <a href="#" name="anchor" class="pd-testimonial-6-link">Hear from more of our clients...<span><img alt="icon of an arrow" width="20" height="20" src="images/design-assets/icon-arrow-secondary.svg"/></span></a> 
+                    <div class="col text-center text-md-end"><a href="#" name="anchor" class="pd-testimonial-6-link">Hear from more of our clients...<span><img alt="icon of an arrow" width="20" height="20" src="images/design-assets/icon-arrow-secondary.svg"/></span></a> 
                     </div>
                 </div>
             </footer>
@@ -392,8 +386,7 @@
             </div>
             <div class="container pb-3 pt-5 text-end" style="z-index: 1; position: relative;">
                 <div class="row">
-                    <div class="col text-center text-md-end">
-                        <a href="#" name="anchor" class="pd-testimonial-7-link">Hear from more of our clients...<span><img alt="icon of an arrow" width="20" height="20" src="images/design-assets/icon-arrow-01.svg"/></span></a> 
+                    <div class="col text-center text-md-end"><a href="#" name="anchor" class="pd-testimonial-7-link">Hear from more of our clients...<span><img alt="icon of an arrow" width="20" height="20" src="images/design-assets/icon-arrow-01.svg"/></span></a> 
                     </div>
                 </div>
             </div>
@@ -425,8 +418,7 @@
                             <p class="pd-testimonial-8-business">Naomi Jenkin Art</p>
                         </footer>                         
                     </article>
-                    <footer class="col-12 text-center">
-                        <a href="#" name="anchor" class="pd-testimonial-8-btn">Read more reviews</a>                          
+                    <footer class="col-12 text-center"><a href="#" name="anchor" class="pd-testimonial-8-btn">Read more reviews</a> 
                     </footer>
                 </div>
             </div>
@@ -458,8 +450,7 @@
                             <p class="pd-testimonial-9-business">Naomi Jenkin Art</p>
                         </footer>                         
                     </article>
-                    <footer class="col-12 text-center">
-                        <a href="#" name="anchor" class="pd-testimonial-9-btn">Read more reviews</a>                          
+                    <footer class="col-12 text-center"><a href="#" name="anchor" class="pd-testimonial-9-btn">Read more reviews</a> 
                     </footer>
                 </div>
             </div>
