--- a/_factory_sections.html
+++ b/_factory_sections.html
@@ -320,7 +320,8 @@
             </div>
             <footer class="container pb-3 pt-5 text-end">
                 <div class="row">
-                    <div class="col text-center text-md-end"><a href="#" name="anchor" class="pd-section-8-link">Learn why we made Scissors<span><img src="images/design-assets/icon-arrow-secondary.svg" alt="icon of an arrow" width="20" height="20"/></span></a> 
+                    <div class="col text-center text-md-end">
+                        <a href="#" name="anchor" class="pd-section-8-link">Learn why we made Scissors<span><img src="images/design-assets/icon-arrow-secondary.svg" alt="icon of an arrow" width="20" height="20"/></span></a> 
                     </div>
                 </div>
             </footer>
@@ -511,7 +512,8 @@
             </div>
             <footer class="container pb-3 pt-5 text-end">
                 <div class="row">
-                    <div class="col text-center text-md-end"><a href="#" name="anchor" class="pd-section-13-link">Meet the team<span><img src="images/design-assets/icon-arrow-secondary.svg" alt="icon of an arrow" width="20" height="20"/></span></a> 
+                    <div class="col text-center text-md-end">
+                        <a href="#" name="anchor" class="pd-section-13-link">Meet the team<span><img src="images/design-assets/icon-arrow-secondary.svg" alt="icon of an arrow" width="20" height="20"/></span></a> 
                     </div>
                 </div>
             </footer>
@@ -539,7 +541,8 @@
                                 <img alt="image of woman working" width="80" height="80" src="/images/uploads/testimonial-woman.jpg" class="pd-section-14-img-thumbnail pd-section-14-img-thumbnail-right" loading="lazy"/>
                             </picture>
                         </div>
-                        <p class="pd-section-14-leading-para">Hi, we&rsquo;re Tim and Emma Bowerbank, web developers based in Cornwall in the UK. We&rsquo;re here to help you create your web projects. From bespoke systems to websites with a CMS, we have the experience and know-how to deliver.</p><a href="#" name="anchor" class="pd-section-14-btn">Contact Us</a> 
+                        <p class="pd-section-14-leading-para">Hi, we&rsquo;re Tim and Emma Bowerbank, web developers based in Cornwall in the UK. We&rsquo;re here to help you create your web projects. From bespoke systems to websites with a CMS, we have the experience and know-how to deliver.</p>
+                        <a href="#" name="anchor" class="pd-section-14-btn">Contact Us</a> 
                     </div>
                     <div class="col-lg-6">
                         <div class="row">
@@ -562,6 +565,61 @@
                         </div>                         
                     </div>
                 </div>
+            </div>
+        </section>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-section-15</p>
+            </div>
+        </section>
+        <section class="bg-light pb-5 pd-section-15 pt-5">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 text-center text-md-start">
+                        <p style="font-size: 0.8rem; letter-spacing: 0.1em; font-weight: 700; text-transform: uppercase;">welcome&nbsp;</p>
+                        <p style="font-size: 2.4rem; font-weight: 700;">Hello!</p>                          
+                    </div>
+                    <div class="col-md-2 pb-3 pb-md-0">
+                        <div class="pb-2 pt-2 text-center text-lg-start">
+                            <picture>
+                                <source srcset="/images/uploads/testimonial-man-3.webp" type="image/webp"/>
+                                <img src="/images/uploads/testimonial-man-3.jpg" alt="image of man working" width="80" height="80" class="pd-section-15-img-thumbnail" loading="lazy"/>
+                            </picture>
+                            <picture>
+                                <source srcset="/images/uploads/testimonial-woman.webp" type="image/webp"/>
+                                <img alt="image of woman working" width="80" height="80" src="/images/uploads/testimonial-woman.jpg" class="pd-section-15-img-thumbnail pd-section-15-img-thumbnail-right" loading="lazy"/>
+                            </picture>
+                        </div>                                                  
+                    </div>
+                    <div class="col-md-10 pb-3 text-center text-md-start"> 
+                        <p class="pd-section-15-leading-para">We&apos;re two <strong>UK based web and app developers</strong>. Friendly, approachable and focused on developing effective <strong>web and app solutions</strong>. Solutions that use the best of the modern web. We&rsquo;re excited about the new advances in technology and we want you to benefit. We&apos;re based in Cornwall and can work with you wherever you are.</p> 
+                    </div>
+                    <div class="col-md-4">
+                        <h3 class="pd-section-15-subHeadlines">Web Development</h3> 
+                        <p class="pd-section-15-block-para">From bespoke web systems through to simple, high performing websites with a CMS. Use us to launch your web projects. Read about our web development service</p> 
+                    </div>
+                    <div class="col-md-4">
+                        <h3 class="pd-section-15-subHeadlines">App Development</h3> 
+                        <p class="pd-section-15-block-para">Save development costs with Pendigital. Our apps, built with Google&apos;s Flutter, use one code-base for both Apple and Android. Explore apps and Flutter</p> 
+                    </div>
+                    <div class="col-md-4">
+                        <h3 class="pd-section-15-subHeadlines">Game Development</h3> 
+                        <p class="pd-section-15-block-para">Engaging games for the primary education market. Compatible with multiple devices including whiteboards and Chromebooks. Play in browser or as an app. Read game developer service</p> 
+                    </div>
+                    <div class="col-12 pt-2 text-center">
+                        <a href="#" name="anchor" class="pd-section-15-btn">Contact Us</a>                          
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-section-16</p>
+            </div>
+        </section>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-section-17</p>
             </div>
         </section>
         <script src="assets/js/popper.min.js"></script>
