Added new pd-section-16 dark

--- a/_factory_sections.html
+++ b/_factory_sections.html
@@ -576,8 +576,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12 text-center text-md-start">
-                        <p style="font-size: 0.8rem; letter-spacing: 0.1em; font-weight: 700; text-transform: uppercase;">welcome&nbsp;</p>
-                        <p style="font-size: 2.4rem; font-weight: 700;">Hello!</p>                          
+                        <h2 class="pd-section-15-intro">welcome&nbsp;</h2>
+                        <p class="pd-section-15-headline">Hello!</p>                          
                     </div>
                     <div class="col-md-2 pb-3 pb-md-0">
                         <div class="pb-2 pt-2 text-center text-lg-start">
@@ -596,15 +596,15 @@
                     </div>
                     <div class="col-md-4">
                         <h3 class="pd-section-15-subHeadlines">Web Development</h3> 
-                        <p class="pd-section-15-block-para">From bespoke web systems through to simple, high performing websites with a CMS. Use us to launch your web projects. Read about our web development service</p> 
+                        <p class="pd-section-15-block-para">From bespoke web systems through to simple, high performing websites with a CMS. Use us to launch your web projects. <a href="#">Read about our web development service</a></p> 
                     </div>
                     <div class="col-md-4">
                         <h3 class="pd-section-15-subHeadlines">App Development</h3> 
-                        <p class="pd-section-15-block-para">Save development costs with Pendigital. Our apps, built with Google&apos;s Flutter, use one code-base for both Apple and Android. Explore apps and Flutter</p> 
+                        <p class="pd-section-15-block-para">Save development costs with Pendigital. Our apps, built with Google&apos;s Flutter, use one code-base for both Apple and Android. <a href="#">Explore apps and Flutter</a></p> 
                     </div>
                     <div class="col-md-4">
                         <h3 class="pd-section-15-subHeadlines">Game Development</h3> 
-                        <p class="pd-section-15-block-para">Engaging games for the primary education market. Compatible with multiple devices including whiteboards and Chromebooks. Play in browser or as an app. Read game developer service</p> 
+                        <p class="pd-section-15-block-para">Engaging games for the primary education market. Compatible with multiple devices including whiteboards and Chromebooks. Play in browser or as an app. <a href="#">Read game developer service</a></p> 
                     </div>
                     <div class="col-12 pt-2 text-center">
                         <a href="#" name="anchor" class="pd-section-15-btn">Contact Us</a>                          
@@ -615,6 +615,45 @@
         <section class="pb-5 pt-5" style="position: relative;">
             <div style="position: absolute; bottom: 1px;">
                 <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-section-16</p>
+            </div>
+        </section>
+        <section class="pb-5 pd-section-16 pt-5">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 text-center text-md-start">
+                        <h2 class="pd-section-16-intro">welcome&nbsp;</h2>
+                        <p class="pd-section-16-headline">Hello!</p> 
+                    </div>
+                    <div class="col-md-2 pb-3 pb-md-0">
+                        <div class="pb-2 pt-2 text-center text-lg-start">
+                            <picture>
+                                <source srcset="/images/uploads/testimonial-man-3.webp" type="image/webp"/>
+                                <img src="/images/uploads/testimonial-man-3.jpg" alt="image of man working" width="80" height="80" class="pd-section-16-img-thumbnail" loading="lazy"/>
+                            </picture>
+                            <picture>
+                                <source srcset="/images/uploads/testimonial-woman.webp" type="image/webp"/>
+                                <img alt="image of woman working" width="80" height="80" src="/images/uploads/testimonial-woman.jpg" class="pd-section-16-img-thumbnail pd-section-16-img-thumbnail-right" loading="lazy"/>
+                            </picture>
+                        </div>                         
+                    </div>
+                    <div class="col-md-10 pb-3 text-center text-md-start"> 
+                        <p class="pd-section-16-leading-para">We&apos;re two <strong>UK based web and app developers</strong>. Friendly, approachable and focused on developing effective <strong>web and app solutions</strong>. Solutions that use the best of the modern web. We&rsquo;re excited about the new advances in technology and we want you to benefit. We&apos;re based in Cornwall and can work with you wherever you are.</p> 
+                    </div>
+                    <div class="col-md-4">
+                        <h3 class="pd-section-16-subHeadlines">Web Development</h3> 
+                        <p class="pd-section-16-block-para">From bespoke web systems through to simple, high performing websites with a CMS. Use us to launch your web projects. <a href="#">Read about our web development service</a></p> 
+                    </div>
+                    <div class="col-md-4">
+                        <h3 class="pd-section-16-subHeadlines">App Development</h3> 
+                        <p class="pd-section-16-block-para">Save development costs with Pendigital. Our apps, built with Google&apos;s Flutter, use one code-base for both Apple and Android. <a href="#">Explore apps and Flutter</a></p> 
+                    </div>
+                    <div class="col-md-4">
+                        <h3 class="pd-section-16-subHeadlines">Game Development</h3> 
+                        <p class="pd-section-16-block-para">Engaging games for the primary education market. Compatible with multiple devices including whiteboards and Chromebooks. Play in browser or as an app. <a href="#">Read game developer service</a></p> 
+                    </div>
+                    <div class="col-12 pt-2 text-center"><a href="#" name="anchor" class="pd-section-16-btn">Contact Us</a> 
+                    </div>
+                </div>
             </div>
         </section>
         <section class="pb-5 pt-5" style="position: relative;">
