Added accessibility tags to pd-section 15 and 16

--- a/_factory_sections.html
+++ b/_factory_sections.html
@@ -320,8 +320,7 @@
             </div>
             <footer class="container pb-3 pt-5 text-end">
                 <div class="row">
-                    <div class="col text-center text-md-end">
-                        <a href="#" name="anchor" class="pd-section-8-link">Learn why we made Scissors<span><img src="images/design-assets/icon-arrow-secondary.svg" alt="icon of an arrow" width="20" height="20"/></span></a> 
+                    <div class="col text-center text-md-end"><a href="#" name="anchor" class="pd-section-8-link">Learn why we made Scissors<span><img src="images/design-assets/icon-arrow-secondary.svg" alt="icon of an arrow" width="20" height="20"/></span></a> 
                     </div>
                 </div>
             </footer>
@@ -512,8 +511,7 @@
             </div>
             <footer class="container pb-3 pt-5 text-end">
                 <div class="row">
-                    <div class="col text-center text-md-end">
-                        <a href="#" name="anchor" class="pd-section-13-link">Meet the team<span><img src="images/design-assets/icon-arrow-secondary.svg" alt="icon of an arrow" width="20" height="20"/></span></a> 
+                    <div class="col text-center text-md-end"><a href="#" name="anchor" class="pd-section-13-link">Meet the team<span><img src="images/design-assets/icon-arrow-secondary.svg" alt="icon of an arrow" width="20" height="20"/></span></a> 
                     </div>
                 </div>
             </footer>
@@ -529,7 +527,7 @@
                     <div class="col-12 text-center text-lg-start">
                         <p class="pd-section-14-intro">About</p> 
                     </div>
-                    <div class="col-lg-6 pb-4 pb-lg-0 text-center text-lg-start"> 
+                    <header class="col-lg-6 pb-4 pb-lg-0 text-center text-lg-start"> 
                         <h2 class="pd-section-14-headline">We design and build bespoke web solutions</h2>
                         <div class="pb-2 pt-2 text-center text-lg-start">
                             <picture>
@@ -541,9 +539,8 @@
                                 <img alt="image of woman working" width="80" height="80" src="/images/uploads/testimonial-woman.jpg" class="pd-section-14-img-thumbnail pd-section-14-img-thumbnail-right" loading="lazy"/>
                             </picture>
                         </div>
-                        <p class="pd-section-14-leading-para">Hi, we&rsquo;re Tim and Emma Bowerbank, web developers based in Cornwall in the UK. We&rsquo;re here to help you create your web projects. From bespoke systems to websites with a CMS, we have the experience and know-how to deliver.</p>
-                        <a href="#" name="anchor" class="pd-section-14-btn">Contact Us</a> 
-                    </div>
+                        <p class="pd-section-14-leading-para">Hi, we&rsquo;re Tim and Emma Bowerbank, web developers based in Cornwall in the UK. We&rsquo;re here to help you create your web projects. From bespoke systems to websites with a CMS, we have the experience and know-how to deliver.</p><a href="#" name="anchor" class="pd-section-14-btn">Contact Us</a> 
+                    </header>
                     <div class="col-lg-6">
                         <div class="row">
                             <div class="col-md-6 pb-3">
@@ -576,8 +573,10 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12 text-center text-md-start">
-                        <h2 class="pd-section-15-intro">welcome&nbsp;</h2>
-                        <p class="pd-section-15-headline">Hello!</p>                          
+                        <header>
+                            <h2 class="pd-section-15-intro">welcome&nbsp;</h2>
+                            <p class="pd-section-15-headline">Hello!</p>
+                        </header>                         
                     </div>
                     <div class="col-md-2 pb-3 pb-md-0">
                         <div class="pb-2 pt-2 text-center text-lg-start">
@@ -589,26 +588,25 @@
                                 <source srcset="/images/uploads/testimonial-woman.webp" type="image/webp"/>
                                 <img alt="image of woman working" width="80" height="80" src="/images/uploads/testimonial-woman.jpg" class="pd-section-15-img-thumbnail pd-section-15-img-thumbnail-right" loading="lazy"/>
                             </picture>
-                        </div>                                                  
+                        </div>                         
                     </div>
                     <div class="col-md-10 pb-3 text-center text-md-start"> 
                         <p class="pd-section-15-leading-para">We&apos;re two <strong>UK based web and app developers</strong>. Friendly, approachable and focused on developing effective <strong>web and app solutions</strong>. Solutions that use the best of the modern web. We&rsquo;re excited about the new advances in technology and we want you to benefit. We&apos;re based in Cornwall and can work with you wherever you are.</p> 
                     </div>
-                    <div class="col-md-4">
+                    <article class="col-md-4">
                         <h3 class="pd-section-15-subHeadlines">Web Development</h3> 
                         <p class="pd-section-15-block-para">From bespoke web systems through to simple, high performing websites with a CMS. Use us to launch your web projects. <a href="#">Read about our web development service</a></p> 
-                    </div>
-                    <div class="col-md-4">
+                    </article>
+                    <article class="col-md-4">
                         <h3 class="pd-section-15-subHeadlines">App Development</h3> 
                         <p class="pd-section-15-block-para">Save development costs with Pendigital. Our apps, built with Google&apos;s Flutter, use one code-base for both Apple and Android. <a href="#">Explore apps and Flutter</a></p> 
-                    </div>
-                    <div class="col-md-4">
+                    </article>
+                    <article class="col-md-4">
                         <h3 class="pd-section-15-subHeadlines">Game Development</h3> 
                         <p class="pd-section-15-block-para">Engaging games for the primary education market. Compatible with multiple devices including whiteboards and Chromebooks. Play in browser or as an app. <a href="#">Read game developer service</a></p> 
-                    </div>
-                    <div class="col-12 pt-2 text-center">
-                        <a href="#" name="anchor" class="pd-section-15-btn">Contact Us</a>                          
-                    </div>
+                    </article>
+                    <footer class="col-12 pt-2 text-center"><a href="#" name="anchor" class="pd-section-15-btn">Contact Us</a> 
+                    </footer>
                 </div>
             </div>
         </section>
@@ -621,8 +619,10 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12 text-center text-md-start">
-                        <h2 class="pd-section-16-intro">welcome&nbsp;</h2>
-                        <p class="pd-section-16-headline">Hello!</p> 
+                        <header>
+                            <h2 class="pd-section-16-intro">welcome&nbsp;</h2>
+                            <p class="pd-section-16-headline">Hello!</p>
+                        </header>                         
                     </div>
                     <div class="col-md-2 pb-3 pb-md-0">
                         <div class="pb-2 pt-2 text-center text-lg-start">
@@ -639,20 +639,21 @@
                     <div class="col-md-10 pb-3 text-center text-md-start"> 
                         <p class="pd-section-16-leading-para">We&apos;re two <strong>UK based web and app developers</strong>. Friendly, approachable and focused on developing effective <strong>web and app solutions</strong>. Solutions that use the best of the modern web. We&rsquo;re excited about the new advances in technology and we want you to benefit. We&apos;re based in Cornwall and can work with you wherever you are.</p> 
                     </div>
-                    <div class="col-md-4">
+                    <article class="col-md-4">
                         <h3 class="pd-section-16-subHeadlines">Web Development</h3> 
                         <p class="pd-section-16-block-para">From bespoke web systems through to simple, high performing websites with a CMS. Use us to launch your web projects. <a href="#">Read about our web development service</a></p> 
-                    </div>
-                    <div class="col-md-4">
+                    </article>
+                    <article class="col-md-4">
                         <h3 class="pd-section-16-subHeadlines">App Development</h3> 
                         <p class="pd-section-16-block-para">Save development costs with Pendigital. Our apps, built with Google&apos;s Flutter, use one code-base for both Apple and Android. <a href="#">Explore apps and Flutter</a></p> 
-                    </div>
-                    <div class="col-md-4">
+                    </article>
+                    <article class="col-md-4">
                         <h3 class="pd-section-16-subHeadlines">Game Development</h3> 
                         <p class="pd-section-16-block-para">Engaging games for the primary education market. Compatible with multiple devices including whiteboards and Chromebooks. Play in browser or as an app. <a href="#">Read game developer service</a></p> 
-                    </div>
-                    <div class="col-12 pt-2 text-center"><a href="#" name="anchor" class="pd-section-16-btn">Contact Us</a> 
-                    </div>
+                    </article>
+                    <footer class="col-12 pt-2 text-center">
+                        <a href="#" name="anchor" class="pd-section-16-btn">Contact Us</a> 
+                    </footer>
                 </div>
             </div>
         </section>
