--- a/_factory_testimonials.html
+++ b/_factory_testimonials.html
@@ -49,7 +49,8 @@
             </article>
             <footer class="container pb-3 pt-5 text-end">
                 <div class="row">
-                    <div class="col text-center text-md-end"><a href="#" name="anchor" class="pd-testimonial-1-link">Hear from more of our clients...<span><img src="images/design-assets/icon-arrow-secondary.svg" alt="icon of an arrow" width="20" height="20"/></span></a> 
+                    <div class="col text-center text-md-end">
+                        <a href="#" name="anchor" class="pd-testimonial-1-link">Hear from more of our clients...<span><img src="images/design-assets/icon-arrow-secondary.svg" alt="icon of an arrow" width="20" height="20"/></span></a> 
                     </div>
                 </div>
             </footer>
@@ -90,7 +91,8 @@
             </article>
             <footer class="container pb-3 pt-5">
                 <div class="row">
-                    <div class="col text-center"><a href="#" name="anchor" class="btn btn-info"><span><img alt="icon of an arrow" width="20" height="20" src="images/design-assets/icon-arrow-01.svg" class="me-2"/></span>View Testimonials</a> 
+                    <div class="col text-center">
+                        <a href="#" name="anchor" class="btn btn-info"><span><img alt="icon of an arrow" width="20" height="20" src="images/design-assets/icon-arrow-01.svg" class="me-2"/></span>View Testimonials</a> 
                     </div>
                 </div>
             </footer>
@@ -139,7 +141,8 @@
             </article>
             <footer class="container pb-3 pt-5 text-end">
                 <div class="row">
-                    <div class="col text-center text-md-end"><a href="#" name="anchor" class="pd-testimonial-3-link">Hear from more of our clients...<span><img alt="icon of an arrow" width="20" height="20" src="images/design-assets/icon-arrow-01.svg"/></span></a> 
+                    <div class="col text-center text-md-end">
+                        <a href="#" name="anchor" class="pd-testimonial-3-link">Hear from more of our clients...<span><img alt="icon of an arrow" width="20" height="20" src="images/design-assets/icon-arrow-01.svg"/></span></a> 
                     </div>
                 </div>
             </footer>
@@ -197,7 +200,8 @@
             </article>
             <footer class="container pb-3 pt-5 text-end" style="z-index: 1; position: relative;">
                 <div class="row">
-                    <div class="col text-center text-md-end"><a href="#" name="anchor" class="pd-testimonial-4-link">Hear from more of our clients...<span><img alt="icon of an arrow" width="20" height="20" src="images/design-assets/icon-arrow-01.svg"/></span></a> 
+                    <div class="col text-center text-md-end">
+                        <a href="#" name="anchor" class="pd-testimonial-4-link">Hear from more of our clients...<span><img alt="icon of an arrow" width="20" height="20" src="images/design-assets/icon-arrow-01.svg"/></span></a> 
                     </div>
                 </div>
             </footer>
@@ -257,7 +261,8 @@
             </div>
             <footer class="container pb-3 pt-5 text-end" style="z-index: 1; position: relative;">
                 <div class="row">
-                    <div class="col text-center text-md-end"><a href="#" name="anchor" class="pd-testimonial-5-link">Hear from more of our clients...<span><img alt="icon of an arrow" width="20" height="20" src="images/design-assets/icon-arrow-secondary.svg"/></span></a> 
+                    <div class="col text-center text-md-end">
+                        <a href="#" name="anchor" class="pd-testimonial-5-link">Hear from more of our clients...<span><img alt="icon of an arrow" width="20" height="20" src="images/design-assets/icon-arrow-secondary.svg"/></span></a> 
                     </div>
                 </div>
             </footer>
@@ -317,7 +322,8 @@
             </div>
             <footer class="container pb-3 pt-5 text-end" style="z-index: 1; position: relative;">
                 <div class="row">
-                    <div class="col text-center text-md-end"><a href="#" name="anchor" class="pd-testimonial-6-link">Hear from more of our clients...<span><img alt="icon of an arrow" width="20" height="20" src="images/design-assets/icon-arrow-secondary.svg"/></span></a> 
+                    <div class="col text-center text-md-end">
+                        <a href="#" name="anchor" class="pd-testimonial-6-link">Hear from more of our clients...<span><img alt="icon of an arrow" width="20" height="20" src="images/design-assets/icon-arrow-secondary.svg"/></span></a> 
                     </div>
                 </div>
             </footer>
@@ -386,7 +392,8 @@
             </div>
             <div class="container pb-3 pt-5 text-end" style="z-index: 1; position: relative;">
                 <div class="row">
-                    <div class="col text-center text-md-end"><a href="#" name="anchor" class="pd-testimonial-7-link">Hear from more of our clients...<span><img alt="icon of an arrow" width="20" height="20" src="images/design-assets/icon-arrow-01.svg"/></span></a> 
+                    <div class="col text-center text-md-end">
+                        <a href="#" name="anchor" class="pd-testimonial-7-link">Hear from more of our clients...<span><img alt="icon of an arrow" width="20" height="20" src="images/design-assets/icon-arrow-01.svg"/></span></a> 
                     </div>
                 </div>
             </div>
@@ -418,7 +425,8 @@
                             <p class="pd-testimonial-8-business">Naomi Jenkin Art</p>
                         </footer>                         
                     </article>
-                    <footer class="col-12 text-center"><a href="#" name="anchor" class="pd-testimonial-8-btn">Read more reviews</a> 
+                    <footer class="col-12 text-center">
+                        <a href="#" name="anchor" class="pd-testimonial-8-btn">Read more reviews</a> 
                     </footer>
                 </div>
             </div>
@@ -450,7 +458,8 @@
                             <p class="pd-testimonial-9-business">Naomi Jenkin Art</p>
                         </footer>                         
                     </article>
-                    <footer class="col-12 text-center"><a href="#" name="anchor" class="pd-testimonial-9-btn">Read more reviews</a> 
+                    <footer class="col-12 text-center">
+                        <a href="#" name="anchor" class="pd-testimonial-9-btn">Read more reviews</a> 
                     </footer>
                 </div>
             </div>
@@ -458,6 +467,21 @@
         <section class="pb-5 pt-5" style="position: relative;">
             <div style="position: absolute; bottom: 1px;">
                 <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-testimonial-10</p>
+            </div>
+        </section>
+        <section class="pb-5 pt-5">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12">
+                        <h3>Column title</h3> 
+                        <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p> 
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-testimonial-11</p>
             </div>
         </section>
         <!-- Bootstrap core JavaScript
